redid index, due to tutoring suggestion.  Issue with navbar alignment of words.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,50 +1,54 @@
-body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 34px;
-    color: #777;
-    background: url("../images/concrete_seamless.png");
-  }
-  * {
-    box-sizing: border-box;
-    margin: 0;
-  }
-
-.container {
-    max-width: 960px
-    border: 1px solid #dddddd;
-}
-.rounded {
-  padding: 20px;
-  width: 280px;
-  height: 280px;
-
-}
-
-/* portfolio*/
-.work {
-  width: 200px;
-  height: 200px;
-}
-.work h3 {
-  position: absolute;
-  bottom: 20px;
-  width: 100%;
-  padding: 15px;
-  margin-bottom: 0;
-  font-weight: 300;
-  line-height: 30px;
-  color: #ffffff;
-  text-align: center;
-  background: #4aaaa5;
-  border-bottom: 0;
-}
-#main-section {
+#img1 {
   float: left;
-  width: 100%;
-  max-width: 960px;
-  padding: 30px;
-  margin: 0 0 40px;
-  background: #ffffff;
-  border: 1px solid #dddddd;
+  margin-right: 10px;
+  margin-left: 5px;
 }
+#footer {
+  background-color: #666666;
+  font-size: 20px;
+  color: white;
+  border-top: 8px solid #4aaaa5;
+  text-align: center;
+  clear: both;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  line-height: 50px;
+  margin-top: 400px;
+}
+h2, h1 {
+  font-weight: bold;
+}
+#par1 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+}
+#top{
+  background-color: #ffffff;
+  position: relative;
+  height: 80px;
+  border: 1px solid #cccccc;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.container {
+  width: 960px;
+  margin: 0 auto;
+  background-color: transparent;
+}
+#midsection {
+  clear: both;
+  margin-top: 100px;
+  position: relative;
+  border: 1px solid #dddddd;
+  padding: 30px;
+
+
+}
+#mainhead {
+  line-height: 80px;
+  background-color: #4aaaa5;
+  text-align: center;
+}
+.navbar {
+  background-color: transparent;
+}
+
